商品一覧ページひな形作成 + ビューにヘッダーを追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,9 @@
 @import 'bootstrap';
+
+body {
+  background-color: #f0f8ff	!important;
+}
+
+.bg-yellowgreen {
+  background-color: #9acd32 !important;
+}
