--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,2 +1,5 @@
-%h1 Items#index
-%p Find me in app/views/items/index.html.haml
+- @items.each_with_index do |item, index|
+  .card.float-left{style: "width: 18em"}
+    = image_tag("banana.jpg", {class: "card-img-top"}) 
+    .card-body
+      = link_to item.name, item_path(item)
