--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,2 +1,27 @@
-%h1 Items#show
-%p Find me in app/views/items/show.html.haml
+%h1 商品の詳細
+.nav.justify-content-end
+  = link_to "一覧", root_path, class: "nav-link"
+%table.table.table-hover
+  %tbody
+    %tr
+      %th= Item.human_attribute_name(:id)
+      %td= @item.id
+    %tr
+      %th= Item.human_attribute_name(:name)
+      %td= @item.name
+    %tr
+      %th= Item.human_attribute_name(:image)
+      %td= image_tag("banana.jpg", {width: "300px", height: "200px"})
+    %tr
+      %th= Item.human_attribute_name(:price)
+      %td= @item.price
+    %tr
+      %th= Item.human_attribute_name(:description)
+      %td= @item.description
+    %tr
+      %th= Item.human_attribute_name(:hidden)
+      %td= @item.hidden
+    %tr
+      %th= Item.human_attribute_name(:display_order)
+      %td= @item.display_order
+      
