--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     %nav.navbar.navbar-expand-lg.navbar-dark.bg-yellowgreen
-      = link_to "さくらマーケット", "#", {class: "navbar-brand"} 
+      = link_to "さくらマーケット", root_path, {class: "navbar-brand"} 
       %button.navbar-toggler{type: "button", data: {toggle: "collapse", target: "#navbarNav"}, aria: {controls: "navbarNav", expanded: "false", label: "Toggle navigation"}}
         %span.navbar-toggler-icon
       #navbarNav.collapse.navbar-collapse
@@ -27,5 +27,5 @@
     .container
       - if notice.present?
         %p.notice= notice
-    = yield
+      = yield
 
