--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -25,3 +25,4 @@
       %th= Item.human_attribute_name(:display_order)
       %td= @item.display_order
       
+= button_to "カートに追加する", add_item_path(item_id: @item.id, quantity: 1), class: "btn btn-primary btn-lg btn-block"
