--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,12 +17,12 @@
           %li.nav-item
             = link_to "日記を見る", "#", {class: "nav-link"}
           %li.nav-item
-            = link_to "お買い物", items_path, {class: "nav-link"}
+            = link_to "お買い物", products_path, {class: "nav-link"}
           - if current_user
             %li.nav-item
               = link_to "ショッピングカート", cart_path, class: "nav-link"
             %li.nav-item
-              = link_to "商品を登録する", new_item_path, {class: "nav-link"}
+              = link_to "商品を登録する", new_admin_product_path, {class: "nav-link"}
             %li.nav-item
               = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link"
           - else
