--- a/app/views/addresses/edit.html.haml
+++ b/app/views/addresses/edit.html.haml
@@ -1,12 +1,13 @@
 %h1 配送情報を編集する
 
-= simple_form_for(@address, url: user_address_path) do |f|
+= simple_form_for(@address, method: :patch, url: address_path) do |f|
   = f.error_notification
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
-
-  .form-inputs
-    = f.input :name
-    = f.input :location
-
+  .form-group
+    = f.label :name
+    = f.text_field :name, value: @address.name, class: 'form-control'
+  .form-group
+    = f.label :location
+    = f.text_area :location, value: @address.location, class: 'form-control'
   .form-actions
-    = f.button :submit
+    = f.button :submit, class: 'btn btn-primary'
