--- a/app/views/admin/products/new.html.haml
+++ b/app/views/admin/products/new.html.haml
@@ -21,7 +21,7 @@
     = f.label :hidden, class: 'form-check-label'
   .form-group
     = f.label :display_order
-    = f.select :display_order, [(1..10)]
+    = f.select :display_order, [1,2,3,4,5,6,7,8,9,10]
 
   .form-actions
     = f.button :submit, class: 'btn btn-primary'
