商品テーブルの名称を変更 + 注文テーブルの名称を変更

--- a/app/views/users/_show.html.haml
+++ b/app/views/users/_show.html.haml
@@ -1,3 +1,4 @@
 %p= user.email
-%p= link_to 'プロフィールを編集する', edit_user_registration_path
-%p= link_to '配送情報を編集する', edit_address_path
+%p= link_to 'プロフィールを編集する', '#'
+%p= link_to '配送先を編集する', edit_address_path
+%p= link_to 'ログイン情報を編集する', edit_user_registration_path
