--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -4,36 +4,44 @@
     %tbody
       %tr
         %td 小計
+        %td= @order.subtotal
         %td
         %td
-        %td
-        = f.hidden_field :subtotal, value: 0
+        = f.hidden_field :subtotal, value: @order.subtotal
       %tr
         %td 代引き手数料
-        %td \ = cash_on_delivery(@cart)
+        %td= @order.cash_on_delivery
         %td
         %td
-        = f.hidden_field :cash_on_delivery, value: 0
+        = f.hidden_field :cash_on_delivery, value: @order.cash_on_delivery
       %tr
         %td 送料
-        %td \ = delivery_fee(@cart)
+        %td= @order.delivery_fee
         %td
         %td
-        = f.hidden_field :delivery_fee, value: 0
+        = f.hidden_field :delivery_fee, value: @order.delivery_fee
       %tr
         %td 税金
-        %td \ = tax_fee(@cart)
+        %td= @order.tax_fee
         %td
         %td
-        = f.hidden_field :tax_fee, value: 0
+        = f.hidden_field :tax_fee, value: @order.tax_fee
       %tr
         %td 合計
-        %td \ = total_price(@cart)
+        %td= @order.total_price
         %td
         %td
-        = f.hidden_field :total_price, value: 0 # total_price(@cart) # TODO: このあたり全てcart モデルに実装
+        = f.hidden_field :total_price, value: @order.total_price
   %table.table.table-hover
-    = f.fields_for :order_details do |order_detail|
+    - @order_details.each do |order_detail|
       %tr
-        %td
+        %td= order_detail.product.name
+        %td= order_detail.unit_price
+        %td= order_detail.quantity
+        %td= order_detail.subtotal
+  = f.fields_for :order_details do |f|
+    = f.hidden_field :product_id
+    = f.hidden_field :unit_price
+    = f.hidden_field :quantity
+    = f.hidden_field :subtotal
   = f.submit "商品を購入する", class: "btn btn-primary btn-lg btn-block"
