管理者がユーザーの配送先情報を編集できる機能を実装

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,8 +23,11 @@
               = link_to "注文履歴", orders_path, class: "nav-link"
             %li.nav-item
               = link_to "ショッピングカート", cart_path, class: "nav-link"
-            %li.nav-item
-              = link_to "商品を登録する", new_admin_product_path, {class: "nav-link"}
+            - if current_user.admin?
+              %li.nav-item
+                = link_to "商品を登録する", new_admin_product_path, {class: "nav-link"}
+              %li.nav-item
+                = link_to "ユーザー管理", admin_users_path, {class: "nav-link"}
             %li.nav-item
               = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link"
           - else
