--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -15,5 +15,5 @@
       %td= user.address.location
       %td= user.email
       %td= user.password
-      %td= link_to 'ログイン情報の編集' ,edit_user_registration_path, class: 'btn btn-primary'
+      %td= link_to 'ログイン情報の編集' ,edit_admin_user_path(id: user.id), class: 'btn btn-primary'
       %td= link_to '配送先情報の編集' ,edit_admin_user_address_path(user_id: user.id), class: 'btn btn-secondary' 
