--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,6 +1,6 @@
 %h1 商品の詳細
 .nav.justify-content-end
-  - if current_user.admin?
+  - if current_user&.admin?
     = link_to "この商品を削除する", admin_product_path(@product), method: :delete, class: "nav-link"
   = link_to "一覧", root_path, class: "nav-link"
 %table.table.table-hover
