--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -6,5 +6,9 @@
   .form-group
     = f.label :name
     = f.text_field :name, value: @user.name, class: 'form-control'
+  .form-group
+    = image_tag @user.image.to_s
+    = f.label :image
+    = f.file_field :image, value: @user.image
   .form-actions
     = f.button :submit, class: 'btn btn-primary'
