--- a/app/views/products/_products_list.html.haml
+++ b/app/views/products/_products_list.html.haml
@@ -1,4 +1,4 @@
-.card.float-left{id: "product_#{product.position}", style: "width: 18em"}
+.card.float-left.mr-2.mb-2{id: "product_#{product.position}", style: "width: 18em"}
   = image_tag("banana.jpg", {class: "card-img-top"})
   .card-body
     = link_to product.name, product
