--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    %nav.navbar.navbar-expand-lg.navbar-dark.bg-yellowgreen
+    %nav.navbar.navbar-expand-lg.navbar-dark.mb-4.bg-yellowgreen
       = link_to "さくらマーケット", root_path, {class: "navbar-brand"} 
       %button.navbar-toggler{type: "button", data: {toggle: "collapse", target: "#navbarNav"}, aria: {controls: "navbarNav", expanded: "false", label: "Toggle navigation"}}
         %span.navbar-toggler-icon
