ユーザーの画像にかかるcssを修正 + READMEに画面一覧を加筆

--- a/app/views/users/_show.html.haml
+++ b/app/views/users/_show.html.haml
@@ -1,4 +1,4 @@
-= image_tag(user.image.to_s, id: 'user_image')
+= image_tag(user.image.to_s, id: 'user-image')
 %p= user.email
 %p= link_to 'プロフィールを編集する', edit_user_path
 %p= link_to '配送先を編集する', edit_user_address_path
