--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -8,10 +8,11 @@
       %th= Cart.human_attribute_name(:quantity)
       %th
   %tbody
-    - @cart.cart_items.each_with_index do |item, index|
+    - @cart.cart_items.each do |item|
       %tr
         %td= link_to item.product.name, product_path(item.product_id)
         %td= item.product.price
         %td= item.quantity
         %td= link_to '削除', delete_item_cart_path(product_id: item.product_id), method: :delete, data: { confirm: "カートから商品を削除します。よろしいですか？" }, class: 'btn btn-danger'
-= link_to '注文画面へ', new_order_path, class: 'btn btn-primary'
+- unless @cart.cart_items.blank?
+  = link_to '注文画面へ', new_order_path, class: 'btn btn-primary'
