不要なコードを削除

--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -3,7 +3,7 @@
 %table.table.table_hover
   %thead.thead-default
     %tr
-      %th ユーザー名
+      %th 配送先名
       %th 送付先住所
       %th メールアドレス
       %th パスワード
