--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -4,7 +4,7 @@
     = link_to "この商品を削除する", admin_product_path(@product), method: :delete, class: "nav-link"
   = link_to "一覧", root_path, class: "nav-link"
 
-= simple_form_for :cart_item, method: :post, url: cart_item_path do |f|
+= simple_form_for [@product, @cart_item], method: :post do |f|
   %table.table.table-hover
     %tbody
       %tr
@@ -32,6 +32,5 @@
       %tr
         %th カートに入れる個数を選択
         %td= f.select :quantity, options_for_select(1..10)
-        = f.hidden_field :product_id, value: @product.id
-  
+
   = f.submit "カートに追加する", class: "btn btn-primary btn-lg btn-block"
