--- a/app/views/users/_show.html.haml
+++ b/app/views/users/_show.html.haml
@@ -1,5 +1,5 @@
 = image_tag(user.image.to_s, id: 'user-image')
 %p= user.email
-%p= link_to 'プロフィールを編集する', edit_user_path
-%p= link_to '配送先を編集する', edit_user_address_path
+%p= link_to 'プロフィールを編集する', edit_user_path(user)
+%p= link_to '配送先を編集する', edit_user_address_path(user_id: user.id)
 %p= link_to 'ログイン情報を編集する', edit_user_registration_path
