--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -8,7 +8,7 @@
       %th= Cart.human_attribute_name(:quantity)
       %th
   %tbody
-    - @cart.cart_items.each do |cart_item|
+    - @cart.cart_items.recent.each do |cart_item|
       %tr
         %td= link_to cart_item.product.name, product_path(cart_item.product_id)
         %td= cart_item.product.price
