--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -10,7 +10,7 @@
   %tbody
     - @cart.cart_items.recent.each do |cart_item|
       %tr
-        %td= link_to cart_item.product.name, product_path(cart_item.product_id)
+        %td= link_to cart_item.product.name, product_path(cart_item.product)
         %td= cart_item.product.price
         %td= cart_item.quantity
         %td= link_to '削除', cart_cart_item_path(cart_item), method: :delete, data: { confirm: "カートから商品を削除します。よろしいですか？" }, class: 'btn btn-danger'
