--- a/app/views/addresses/edit.html.haml
+++ b/app/views/addresses/edit.html.haml
@@ -1,13 +1,3 @@
 %h1 配送情報を編集する
 
-= simple_form_for(@address, method: :patch, url: user_address_path) do |f|
-  = f.error_notification
-  = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
-  .form-group
-    = f.label :name
-    = f.text_field :name, value: @address.name, class: 'form-control'
-  .form-group
-    = f.label :location
-    = f.text_area :location, value: @address.location, class: 'form-control'
-  .form-actions
-    = f.button :submit, class: 'btn btn-primary'
+= render partial: 'form', locals: {address: @address, url: user_address_path}
