--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,19 +1,21 @@
-%h1 ユーザー一覧
+%h1 ユーザー管理画面
 
 %table.table.table_hover
   %thead.thead-default
     %tr
-      %th 配送先名
-      %th 送付先住所
+      %th ID
+      %th ニックネーム
       %th メールアドレス
-      %th パスワード
+      %th 配送先名
+      %th 配送先住所
       %th
       %th
-  - @users.each do |user|
+  - @users.order(:id).each do |user|
     %tr
+      %td= user.id
+      %td= user.name
+      %td= user.email
       %td= user.address.name
       %td= user.address.location
-      %td= user.email
-      %td= user.password
       %td= link_to 'ユーザー情報の編集' ,edit_admin_user_path(id: user.id), class: 'btn btn-primary'
       %td= link_to '配送先情報の編集' ,edit_admin_user_address_path(user_id: user.id), class: 'btn btn-secondary' 
