--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,14 +1,3 @@
 %h1 ユーザー情報を編集する
 
-= simple_form_for(@user, method: :patch, url: user_path) do |f|
-  = f.error_notification
-  = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
-  .form-group
-    = f.label :name
-    = f.text_field :name, value: @user.name, class: 'form-control'
-  .form-group
-    = image_tag @user.image.to_s
-    = f.label :image
-    = f.file_field :image, value: @user.image
-  .form-actions
-    = f.button :submit, class: 'btn btn-primary'
+= render partial: 'form', locals: {user: @user, url: user_path}
