ヘッダーのリンクを修正

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
       #navbarNav.collapse.navbar-collapse
         %ul.navbar-nav
           %li.nav-item
-            = link_to "日記を見る", "#", {class: "nav-link"}
+            = link_to "日記を見る", notes_path, {class: "nav-link"}
           %li.nav-item
             = link_to "お買い物", products_path, {class: "nav-link"}
           - if current_user
