--- a/app/views/users/_show.html.haml
+++ b/app/views/users/_show.html.haml
@@ -3,4 +3,4 @@
 %p= link_to 'プロフィールを編集する', edit_user_path(user)
 %p= link_to '配送先を編集する', edit_user_address_path(user_id: user.id)
 %p= link_to 'ログイン情報を編集する', edit_user_registration_path
-= link_to '新しい日記を書く', new_user_note_path, class: "btn btn-primary"
+= link_to '新しい日記を書く', new_note_path, class: "btn btn-primary"
